Use the base widgets id and remove the unneeded id value from the clearable file input

--- a/comicsdb/templates/comicsdb/model_with_image_form.html
+++ b/comicsdb/templates/comicsdb/model_with_image_form.html
@@ -54,7 +54,7 @@
 
 {% block js %}
 <script>
-var file = document.getElementById("file");
+var file = document.getElementById("id_image");
 file.onchange = function(){
     if(file.files.length > 0)
     {
