--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,7 @@
       </div>
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
+          <a class="navbar-item" href="{% url 'home' %}">Home</a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Browse</a>
             <div class="navbar-dropdown">
