--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,13 +16,13 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Browse</a>
             <div class="navbar-dropdown">
-              <a class="navbar-item" href="{% url 'publisher:list' page=1 %}">Publishers</a>
-              <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
-              <a class="navbar-item" href="{% url 'issue:list' page=1 %}">Issues</a>
-              <a class="navbar-item" href="{% url 'creator:list' page=1 %}">Creators</a>
-              <a class="navbar-item" href="{% url 'character:list' page=1 %}">Characters</a>
-              <a class="navbar-item" href="{% url 'arc:list' page=1 %}">Story Arcs</a>
-              <a class="navbar-item" href="{% url 'team:list' page=1 %}">Teams</a>
+              <a class="navbar-item" href="{% url 'publisher:list' %}">Publishers</a>
+              <a class="navbar-item" href="{% url 'series:list' %}">Series</a>
+              <a class="navbar-item" href="{% url 'issue:list' %}">Issues</a>
+              <a class="navbar-item" href="{% url 'creator:list' %}">Creators</a>
+              <a class="navbar-item" href="{% url 'character:list' %}">Characters</a>
+              <a class="navbar-item" href="{% url 'arc:list' %}">Story Arcs</a>
+              <a class="navbar-item" href="{% url 'team:list' %}">Teams</a>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
