Use a semicolon to separate multiple story titles on the issue_detail template

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -120,7 +120,7 @@
           {% with names=issue.name %}
             <p>
               <strong>
-                <em>"{% for name in names %}{% if not forloop.first %}, {% endif %}{{ name }}{% endfor %}"</em>
+                <em>"{% for name in names %}{% if not forloop.first %}; {% endif %}{{ name }}{% endfor %}"</em>
               </strong>
             </p><br>
           {% endwith %}
