Fix template page titles

--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Arc Detail{% endblock page-title %}
+{% block title %}{{ arc.name }}{% endblock title %}
 
 {% block comic_content %}
   <!-- arc nav -->
