--- a/comicsdb/templates/comicsdb/character_list.html
+++ b/comicsdb/templates/comicsdb/character_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Character List{% endblock page-title %}
+{% block title %}Characters{% endblock title %}
 
 {% block comic_content %}
 
