--- a/comicsdb/templates/comicsdb/contact-success.html
+++ b/comicsdb/templates/comicsdb/contact-success.html
@@ -1,6 +1,6 @@
 {% extends "comicsdb/comics_base.html" %}
 
-{% block page-title %}Contact Form{% endblock page-title %}
+{% block title %}Contact{% endblock title %}
 
 {% block comic_content %}
   <div class="container">
