--- a/comicsdb/templates/comicsdb/contact-us.html
+++ b/comicsdb/templates/comicsdb/contact-us.html
@@ -1,6 +1,6 @@
 {% extends "comicsdb/comics_base.html" %}
 
-{% block page-title %}Contact Form{% endblock page-title %}
+{% block title %}Contact Us Form{% endblock title %}
 
 {% block comic_content %}
   <h1 class="title">Contact Us</h1>
