--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Creator Detail{% endblock page-title %}
+{% block title %}{{ creator.name }}{% endblock title %}
 
 {% block comic_content %}
   <!-- creator nav -->
