--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -1,7 +1,7 @@
 {% extends "comicsdb/comics_base.html" %}
 {% load bulma_tags %}
 
-{% block page-title %}Credits Form{% endblock page-title %}
+{% block title %}Add Credits Form{% endblock title %}
 
 {% block comic_content %}
   <h1 class="title">Credits Form</h1>
