--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -1,6 +1,6 @@
 {% extends "comicsdb/comics_base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Metron{% endblock %}
 
 {% block content %}
   <!-- hero -->
