--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Issue Detail{% endblock page-title %}
+{% block title %}{{ issue }}{% endblock title %}
 
 {% block comic_content %}
   <!-- series issue nav -->
