--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Issue List{% endblock page-title %}
+{% block title %}Issues{% endblock title %}
 
 {% block comic_content %}
 
