--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Publisher List{% endblock page-title %}
+{% block title %}Publishers{% endblock title %}
 
 {% block comic_content %}
 
