--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Series Detail{% endblock page-title %}
+{% block title %}{{ series.name }}{% endblock title %}
 
 {% block comic_content %}
   <!-- series nav -->
