--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -1,7 +1,7 @@
 {% extends "comicsdb/comics_base.html" %}
 {% load bulma_tags %}
 
-{% block page-title %}Series Form{% endblock page-title %}
+{% block title %}Series Form{% endblock title %}
 
 {% block comic_content %}
   <h1 class="title">Series Form</h1>
