--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Team List{% endblock page-title %}
+{% block title %}Teams{% endblock title %}
 
 {% block comic_content %}
 
