--- a/comicsdb/templates/comicsdb/arc_list.html
+++ b/comicsdb/templates/comicsdb/arc_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Arc List{% endblock page-title %}
+{% block title %}Story Arcs{% endblock title %}
 
 {% block comic_content %}
 
