--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Creator List{% endblock page-title %}
+{% block title %}Creators{% endblock title %}
 
 {% block comic_content %}
 
