--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Publisher Detail{% endblock page-title %}
+{% block title %}{{ publisher.name }}{% endblock title %}
 
 {% block comic_content %}
   <!-- publisher nav -->
