--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Series List{% endblock page-title %}
+{% block title %}Series{% endblock title %}
 
 {% block comic_content %}
 
