--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -2,7 +2,7 @@
 {% load thumbnail %}
 {% load static %}
 
-{% block page-title %}Team Detail{% endblock page-title %}
+{% block title %}{{ team.name }}{% endblock title %}
 
 {% block comic_content %}
   <!-- team nav -->
