--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -51,14 +51,14 @@
           <figure class="image is-2by3">
           {% if issue.image %}
             {% thumbnail issue.image "320x480" crop="center" as im %}
-              <img src="{{ im.url }}" alt = "{{ issue }}">
+              <img src="{{ im.url }}" alt = "{{ issue.readable_name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}">
+            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue.readable_name }}">
           {% endif %}
           </figure>
         </a>
-        <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+        <a href="{% url 'issue:detail' issue.slug %}">{{ issue.readable_name }}</a>
       </div>
       {% endfor %}
     </div>
