--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,9 @@
             <div class="navbar-dropdown">
               <a class="navbar-item" href="/pages/contribute/">How To Contribute FAQ</a>
               <a class="navbar-item" href="/pages/guidelines/editing/">Editing Guidelines</a>
+              {% if user.is_authenticated %}
               <a class="navbar-item" href="/docs/">API Docs</a>
+              {% endif %}
               <hr class="navbar-divider">
               <a class="navbar-item" href="{% url 'contact:email' %}">Contact Us</a>
               <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">Report an issue</a>
