Move the series slug javascript from the template into a static js file

--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -52,20 +52,5 @@
 {% block js %}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
-<script>
-document.getElementById("id_name").onkeyup = function() {
-    var e = document.getElementById("id_slug");
-    var seriesName = document.getElementById("id_name").value;
-    var seriesYear = document.getElementById("id_year_began").value;
-    var res = seriesName + ' ' + seriesYear;
-    if (!e._changed) { e.value = URLify(res, 255, false); }
-}
-document.getElementById("id_year_began").onkeyup = function() {
-    var e = document.getElementById("id_slug");
-    var seriesName = document.getElementById("id_name").value;
-    var seriesYear = document.getElementById("id_year_began").value;
-    var res = seriesName + ' ' + seriesYear;
-    if (!e._changed) { e.value = URLify(res, 255, false); }
-}
-</script>
+<script src="{% static 'site/js/seriesslug.js' %}"></script>
 {% endblock %}
