Move the primary slug javascript from the template into a static js file

--- a/comicsdb/templates/comicsdb/model_with_image_form.html
+++ b/comicsdb/templates/comicsdb/model_with_image_form.html
@@ -56,12 +56,7 @@
 {% block js %}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
-<script>
-document.getElementById("id_name").onkeyup = function() {
-    var e = document.getElementById("id_slug");
-    if (!e._changed) { e.value = URLify(document.getElementById("id_name").value, 255, false); }
-}
-</script>
+<script src="{% static 'site/js/slug.js' %}"></script>
 <script>
 var file = document.getElementById("id_image");
 file.onchange = function(){
