Move the image selector filename javascript into it's own static file

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -57,13 +57,5 @@
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
 <script src="{% static 'site/js/issueslug.js' %}"></script>
-<script>
-var file = document.getElementById("id_image");
-file.onchange = function(){
-    if(file.files.length > 0)
-    {
-      document.getElementById('filename').innerHTML = file.files[0].name;
-    }
-};
-</script>
+<script src="{% static 'site/js/image-selector-filename.js' %}"></script>
 {% endblock %}
