Rename the issue slug javascript file

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -56,6 +56,6 @@
 {% block js %}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
-<script src="{% static 'site/js/issueslug.js' %}"></script>
+<script src="{% static 'site/js/issue-slug.js' %}"></script>
 <script src="{% static 'site/js/image-selector-filename.js' %}"></script>
 {% endblock %}
