--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -52,5 +52,5 @@
 {% block js %}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
-<script src="{% static 'site/js/seriesslug.js' %}"></script>
+<script src="{% static 'site/js/series-slug.js' %}"></script>
 {% endblock %}
