Minor change to the issue form template

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -103,7 +103,8 @@
 <script src="{% static 'site/js/jquery.formset.js' %}"></script>
 <script type="text/javascript">
     $('.formset_row').formset({
-        addText: 'Add creator credit',
+        addText: 'Add another creator credit',
+        deleteText: 'Remove?',
         prefix: 'credits_set'
     });
 </script>
