Fix the issue form template so we can use the __str__ property again

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {{% load bulma_tags %}
 
-{% block title %}{{ form.instance }} Form{% endblock title %}
+{% block title %}Issue Form{% endblock title %}
 
 {% block comic_content %}
   <h1 class="title">{{ form|get_class }}</h1>
