Remove typo in the issue form template

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -1,6 +1,6 @@
 {% extends "comicsdb/comics_base.html" %}
 {% load static %}
-{{% load bulma_tags %}
+{% load bulma_tags %}
 
 {% block title %}Issue Form{% endblock title %}
 
